--- a/package.json
+++ b/package.json
@@ -1,36 +1,55 @@
 {
   "name": "demon-jeopardy",
-  "version": "1.0.0",
-  "description": "Echoes of the Expanse is a Jeopardy-like web application. It provides trivia with questions based on the demons of Atlus' Megami Tensei franchise. Players can either attempt matches solo as a team or versus against each others as different teams.",
-  "main": "frontend/src/index.js",
-  "directories": {
-    "test": "tests"
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "react": "cd frontend && npm start",
-    "electron": "wait-on http://localhost:3000 && electron .",
-    "dev": "concurrently \"npm run react\" \"npm run electron\"",
-    "build": "cd frontend && npm run build",
-    "start": "npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PsychopathPotato/Demon-Jeopardy.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PsychopathPotato/Demon-Jeopardy/issues"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
-  "homepage": "https://github.com/PsychopathPotato/Demon-Jeopardy#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.0",
-    "electron": "^37.1.0",
+    "electron": "^37.2.1",
+    "electron-builder": "^26.0.12",
+    "electron-is-dev": "^3.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "wait-on": "^8.0.3"
-  },
-  "dependencies": {
-    "better-sqlite3": "^12.2.0"
   }
 }
