--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ dist-react
 dist-electron
 *.local
 
+# database files
+*.sqlite
+*.sqlite3
+.db
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
